--- a/scss/style.scss
+++ b/scss/style.scss
@@ -243,6 +243,7 @@ body {
     & .graph-card {
       min-height: 37.8vh;
       height: 37.8vh;
+      min-height: 36.4rem;
       border-radius: 4px;
       border: solid 1.5px #eaebee;
 
@@ -321,13 +322,19 @@ body {
           }
 
           &-info {
+            font-family: "Open Sans", sans-serif;
             position: absolute;
             white-space: nowrap;
             left: 0;
             bottom: -7%;
             font-size: 1.2rem;
+            font-weight: 700;
             color: rgba($color: #171717, $alpha: .6);
             transform: translate(-15%, 100%);
+            @include respond(desktop-lg) {
+              font-size: 1rem;
+            }
+
             @include respond(desktop-md) {
               font-size: 1rem;
             }
