--- a/scss/style.scss
+++ b/scss/style.scss
@@ -41,12 +41,16 @@ $red-gradient: linear-gradient(#fa2020, #ef0049);
 html {
   font-size: 62.5%;
   //font-size: 68%;
-  @include respond(desktop-xl) {
+  @include respond(desktop-xxl) {
     font-size: 58%;
   }
 
-  @include respond(desktop-md) {
+  @include respond(desktop-xl) {
     font-size: 53%;
+  }
+
+  @include respond(desktop-md) {
+    font-size: 48%;
   }
 }
 
@@ -178,9 +182,19 @@ body {
   width: 100%;
   margin-left: 24.4rem;
   background-color: #f8f9fb;
-  padding: 4.1rem 4.6rem 0rem 3.4rem;
+  padding: 0 4.6rem 2.8rem 3.4rem;
 
   &-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: calc(100% - 24.4rem);
+    height: 17rem;
+    margin-left: 24.4rem;
+    padding: 4.1rem 4.6rem 0 3.4rem;
+    background-color: #f8f9fb;
+    //border-bottom: 1px solid #dee2e6;
+    z-index: 500;
     & button {
       font-family: "Lato", sans-serif;
       width: 21.7rem;
@@ -238,12 +252,13 @@ body {
     }
   }
   &-body {
+    margin-top: 17rem;
     font-family: "Lato", sans-serif;
 
     & .graph-card {
-      min-height: 37.8vh;
-      height: 37.8vh;
-      min-height: 36.4rem;
+      min-height: 36.44rem;
+      height: 100%;
+      max-height: 37.8vh;
       border-radius: 4px;
       border: solid 1.5px #eaebee;
 
@@ -297,7 +312,7 @@ body {
         & .bar {
           position: relative;
           padding-bottom: 4rem;
-          width: 1.6rem;
+          width: 16px;
           height: auto;
           border-radius: 8px;
           background-color: rgba($color: #c1c0c8, $alpha: 0.24);
